syntax = "proto3";

package oceanstars.user.protobuf;

import "user-permission-dto.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.user.api.rpc.v1.service.permission";

service UserPermissionAppService {

  // 创建权限接口
  rpc createPermission(UserCreatePermissionCommand) returns (UserCreatePermissionResult);
}

